--- a/components/hero.html
+++ b/components/hero.html
@@ -147,6 +147,9 @@
             <div class="carousel-slide">
                 <img src="images/h22.jpg" alt="Doctor Consultation" class="carousel-image">
             </div>
+            <div class="carousel-slide">
+             <img src="images/h33.png" alt="New Slide Description" class="carousel-image">
+            </div>
         </div>
         
         <button class="carousel-arrow arrow-left" aria-label="Previous slide">
@@ -159,6 +162,7 @@
         <div class="carousel-dots">
             <button class="carousel-dot active" data-index="0" aria-label="Go to slide 1"></button>
             <button class="carousel-dot" data-index="1" aria-label="Go to slide 2"></button>
+            <button class="carousel-dot" data-index="2" aria-label="Go to slide 3"></button>
         </div>
     </div>
 
