--- a/components/blog.html
+++ b/components/blog.html
@@ -225,11 +225,11 @@
 
                 <!-- Blog Card 5 -->
                 <div class="hs-blog-card">
-                    <img src="https://i.ibb.co/WvdtcH3b/b5.jpg" alt="Blog Post" class="hs-blog-img">
+                    <img src="https://i.ibb.co/Qv2DzYF4/cinematic-view-hospital-scene-with-people-working-healthcare-system.jpg" alt="Blog Post" class="hs-blog-img">
                     <div class="hs-blog-content">
                         <div class="hs-blog-date">July 22, 2023</div>
-                        <h3 class="hs-blog-title">"Robotic Surgery in Urology: Precision & Benefits"<h3>
-                        <p class="hs-blog-excerpt">Robotic-assisted surgery has revolutionized the field of urology, offering patients less invasive options with faster recovery and improved outcomes. This advanced technique is now widely used for procedures involving the kidneys, bladder, and prostate.</p>
+                        <h3 class="hs-blog-title">"Laparoscopic Uro-Surgery: Minimally Invasive Techniques & Benefits"<h3>
+                        <p class="hs-blog-excerpt">Laparoscopic surgery has transformed modern urology, providing patients with less invasive treatment options that offer faster recovery times and excellent outcomes. This advanced surgical approach is now routinely used for various procedures involving the kidneys, bladder, prostate, and ureters.</p>
                         <a href="viewblog5.html" class="hs-read-more">Read More</a>
                     </div>
                 </div>
