--- a/components/map.html
+++ b/components/map.html
@@ -93,7 +93,7 @@
         </div>
         <div class="address-box">
             <h3>NKPC Kidney Clinic</h3>
-            <p>1212, 2nd St, Purbalok, Santoshpur, Kolkata, West Bengal 700099</p>
+            <p>1212 Kalikapur, Purbalok, Kolkata, West Bengal 700099</p>
         </div>
     </section>
 </body>
