--- a/components/service.html
+++ b/components/service.html
@@ -280,7 +280,7 @@
                         <img src="images/2.jpg" alt="">
                     </div>
                     <h3 class="nkpc-service-name">Stone Management</h3>
-                    <p class="nkpc-service-desc">Comprehensive care for kidney and urinary stones using advanced lithotripsy and endoscopic techniques.</p>
+                    <p class="nkpc-service-desc">Comprehensive care for kidney and urinary stones using Advanced Laser Lithotripsy and Endoscopic techniques.</p>
                     <!-- <a href="#" class="nkpc-service-link">Learn more <i class="fas fa-chevron-right"></i></a> -->
                 </div>
                 
