--- a/components/infodr.html
+++ b/components/infodr.html
@@ -340,7 +340,7 @@
             <div class="dm-profile-wrapper">
                 <div class="dm-bio-content">
                     <p class="dm-intro-text">Dr. Avishek Mukherjee is one of the foremost practising urosurgeons in eastern India. He is trained from two of the most prestigious medical universities of India - AIIMS New Delhi and PGI Chandigarh.</p>
-                    <p class="dm-intro-text">After completing his training, he came to the city of joy Kolkata in 2003. In Kolkata, he joined the esteemed team at Wockhardt Hospital and Kidney Institute from 2003 till 2009, where he had the good fortune to work with stalwarts like Dr. Shibaji Basu, Dr. Kalyan Sarkar, Dr. P.K. Mishra, Dr. Amlan Chakraborty, and Dr. R.K. Gopala Krishna.</p>
+                    <p class="dm-intro-text">After completing his training, he came to the city of joy Kolkata in 2003. In Kolkata, he joined the esteemed team at Wockhardt Hospital and Kidney Institute from 2003 till 2009.</p>
                     <p class="dm-intro-text">Dr Mukherjee has received his medical and surgical training from the most respected institutes of this country. He joined MBBS at the All India Institute of Medical Sciences (AIIMS) at New Delhi in the year 1991. After completing his basic medical training he immediately joined the surgical training programme also at AIIMS and completed his Masters in Surgery in the year 2000.</p>
                     
                     <div class="dm-credentials-left">
@@ -391,13 +391,13 @@
                 </div>
                 
                 <div class="dm-image-container">
-                    <div class="dm-cert-badge">Board Certified Surgeon</div>
+                    <!-- <div class="dm-cert-badge">Board Certified Surgeon</div> -->
                     <img src="https://i.ibb.co/PvccRt4Z/mukharji.png" alt="Dr. Avishek Mukherjee" class="dm-doctor-img">
                     <div class="dm-img-caption">
                         <h4>Dr. Avishek Mukherjee</h4>
                         <p>MS, MCh (Urology)</p>
                         <p>Urologist & Uro-Oncologist</p>
-                        <p>20+ Years of Experience</p>
+                        <p>26+ Years of Experience</p>
                     </div>
                     
                     <div class="dm-credentials-right">
@@ -415,11 +415,11 @@
                             </tr>
                             <tr>
                                 <td>2004</td>
-                                <td>Performed first laparoscopic radical prostate cancer surgery in eastern India</td>
+                                <td>Performed first laparoscopic radical prostate cancer surgery in Eastern India</td>
                             </tr>
                             <tr>
                                 <td>2005</td>
-                                <td>Performed first laparoscopic nephron sparing surgery for kidney cancer in eastern India</td>
+                                <td>Performed first laparoscopic nephron sparing surgery for kidney cancer in Eastern India</td>
                             </tr>
                             <tr>
                                 <td>2005</td>
@@ -427,11 +427,11 @@
                             </tr>
                             <tr>
                                 <td>-</td>
-                                <td>Pioneer in penile implant surgery for erectile dysfunction in eastern India</td>
+                                <td>Pioneer in penile implant surgery for erectile dysfunction in Eastern India</td>
                             </tr>
                             <tr>
                                 <td>-</td>
-                                <td>Largest series of holmium laser HOLEP surgery for benign prostate in eastern India</td>
+                                <td>Largest series of holmium laser HOLEP surgery for benign prostate in Eastern India</td>
                             </tr>
                             <tr>
                                 <td>-</td>
